--- a/package.json
+++ b/package.json
@@ -27,6 +27,10 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "engines": {
+    "npm": "6.x",
+    "node": "12.x"
+  },
   "eslintConfig": {
     "extends": "react-app"
   },
